Done Instruction Side Holiday Module Added Web Service (RestAPI) for Holiday

--- a/InstructorArea/css/main.css
+++ b/InstructorArea/css/main.css
@@ -26,3 +26,7 @@ Web Application is under GNU General Public License v3.0
 #tableList th{
     cursor:pointer;
 }
+#formControl .required{
+    color:red;
+    font-size: 0.8em;
+}
