--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ Web Application is under GNU General Public License v3.0
     Created on : 10 Mar 2022, 9:51:12 pm
     Author     : Kheng Huang
 */
+body{
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 /*--------------------------------------------------------------
 # Back to top button
@@ -151,6 +155,11 @@ Web Application is under GNU General Public License v3.0
     transition: 0.3s;
     text-decoration: none;
 }
+
+.omegaLogo a{
+    text-decoration: none;
+}
+
 .navbar a i, .navbar a:focus i {
     font-size: 12px;
     line-height: 0;
