--- a/css/main.css
+++ b/css/main.css
@@ -350,3 +350,44 @@ Web Application is under GNU General Public License v3.0
     left: 0;
     right: 0;
 }
+#content .rightSide{
+    float:right;
+}
+#content .entries{
+    float:right;
+}
+#content .pagination{
+    justify-content: center;
+}
+#content .pagination li{
+    cursor:pointer;
+}
+#content .pagination li.disabled{
+    cursor:no-drop;
+} 
+#content #tableList th{
+    cursor:pointer;
+}
+/*--------------------------------------------------------------
+# Breadcrumbs
+--------------------------------------------------------------*/
+.breadcrumbs {
+  margin-top: 73px;
+  text-align: center;
+  background: #5fcf80;
+  padding: 30px 0;
+  color: #fff;
+}
+@media (max-width: 992px) {
+  .breadcrumbs {
+    margin-top: 63px;
+  }
+}
+.breadcrumbs h2 {
+  font-size: 32px;
+  font-weight: 500;
+}
+.breadcrumbs p {
+  font-size: 14px;
+  margin-bottom: 0;
+}
