--- a/css/main.css
+++ b/css/main.css
@@ -349,7 +349,7 @@ body{
 
 #content{
     width: 100%;
-    height: 80vh;
+    min-height: 80vh;
     position: relative;
 }
 #content:before{
@@ -378,25 +378,140 @@ body{
     cursor:pointer;
 }
 /*--------------------------------------------------------------
-# Breadcrumbs
+# Classes
 --------------------------------------------------------------*/
-.breadcrumbs {
-  margin-top: 73px;
-  text-align: center;
-  background: #5fcf80;
-  padding: 30px 0;
-  color: #fff;
+
+.classes .class-item {
+  border-radius: 5px;
+  border: 1px solid #eef0ef;
 }
-@media (max-width: 992px) {
-  .breadcrumbs {
-    margin-top: 63px;
-  }
+.classes .class-content {
+  padding: 15px;
 }
-.breadcrumbs h2 {
-  font-size: 32px;
-  font-weight: 500;
+.classes .class-content h3 {
+  font-weight: 700;
+  font-size: 20px;
 }
-.breadcrumbs p {
+.classes .class-content h3 a {
+  color: #37423b;
+  transition: 0.3s;
+}
+.classes .class-content h3 a:hover {
+  color: #5fcf80;
+}
+.classes .class-content p {
   font-size: 14px;
-  margin-bottom: 0;
+  color: #777777;
+}
+.classes .class-content h4 {
+  font-size: 14px;
+  background: #5fcf80;
+  padding: 7px 14px;
+  color: #fff;
+  margin: 0;
+}
+.classes .class-content .time {
+  margin: 0;
+  font-weight: 700;
+  font-size: 18px;
+  color: #37423b;
+}
+.classes .formteacher {
+  padding-top: 15px;
+  border-top: 1px solid #eef0ef;
+}
+.classes .formteacher.formteacher-profile img {
+  max-width: 50px;
+  border-radius: 50px;
+}
+.classes .formteacher .formteacher-profile span {
+  padding-left: 10px;
+  font-weight: 600;
+  font-size: 16px;
+  color: #5a6c60;
+}
+
+@media (min-width: 992px){
+    .breadcrumb {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 768px){
+    .breadcrumb {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 576px){
+    .breadcrumb {
+        max-width: 540px;
+    }
+}
+.breadcrumbs {
+    margin-top: 15px;
+}
+.breadcrumb {
+    width: 80%;
+    padding-top: 7px;
+    padding-right: var(--bs-gutter-x,.75rem);
+    padding-left: var(--bs-gutter-x,.75rem);
+    padding-bottom: 7px;
+    background-color: white;
+}
+
+.btn-success{
+    color:white !important;
+}
+.btn-success:hover{
+    color:greenyellow !important;
+}
+#formControl .required{
+    color:red;
+    font-size: 0.8em;
+}
+#formControl .invalid-content{
+    width: 100%;
+    margin-top: 0.25rem;
+    font-size: 80%;
+    color: #e74a3b;
+}
+input[type="file"]::-webkit-file-upload-button{
+    padding: 0px 10px 0px 0px;
+    border-radius: 5px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    background-color: #fff !important;
+    border:none;
+    border-right: lightgray 2px solid;
+}
+input:disabled {
+  cursor:no-drop;
+  background-color: #DDDDDD !important;
+}
+
+.alertChild {
+    width: 80%;
+}
+
+.schedule .dayOfWeekTitle{
+    padding: 10px;
+    color:white;
+    font-weight: bold;
+    background-color: #e74a3b !important;
+}
+
+.schedule ul{
+    background-color: #eef0ef;
+    padding-top: 5px;
+    padding-bottom: 2px;
+    margin-bottom: 0px;
+}
+.schedule ul li{
+    padding-bottom: 5px;
+}
+
+.table-active{
+    background-color: #86b7fe;
+    color:white;
 }
