--- a/css/announcement.css
+++ b/css/announcement.css
@@ -14,6 +14,7 @@ Web Application is under GNU General Public License v3.0
     padding: 20px;
     margin-bottom: 20px;
     word-break: break-word;
+    cursor: pointer;
     
 }
 
